gccida/g1/ix86_match_ccmode
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_match_ccmode/src/i386.c:7535:35: error: must use 'enum' tag to refer to type 'machine_mode'
int  ix86_match_ccmode( rtx insn, machine_mode req_mode) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_match_ccmode/src/i386.c:7542:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64)insn[2]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_match_ccmode/src/i386.c:7546:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 7084, "ix86_match_ccmode"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_match_ccmode/src/i386.c:7549:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 7086, "ix86_match_ccmode"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_match_ccmode/src/i386.c:7580:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 7113, "ix86_match_ccmode"); 
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_match_ccmode/src/obj/i386.o] Error 1
